refactor testes